# history

./: Makefile  build_s3c2440a.sh  build_stm32.sh
app/: .gdbinit  Makefile
app/keil-example1/: led.c  main.c  rtk.uvproj  serail.c
app/s3c2440a_app1/: build_s3c2440a.sh  dircfg.mk  main.c
app/stm32-example1/: Makefile  dircfg.mk  main.c  serail_test.c
app/stm32-example2/: Makefile  dircfg.mk  main.c  serail_test.c
arch/arm/: Makefile  armv4_context.c  armv4_context_gcc.S  armv4_exc.c  armv4_exc_gcc.S  armv7m_context.c  armv7m_context_gcc.S  armv7m_context_rvds.S
arch/arm/cortex-m3/: context_gcc.S  cpuport.c
bsp/: Makefile
bsp/s3c2440a/: .gdbinit  Makefile  ldscript.lds  main.c  mmu.h  s3c2440.c  s3c2440_int.c  s3c2440_lcd.c  s3c2440_timer.c  s3c2440_timer.h  s3c2440_uart.c  s3c2440_uart.h  start.S  sysALib.S
bsp/s3c2440a_app1/: Makefile  dircfg.mk  main.c
bsp/s3c2440a_app1/s3c2440-no-os/MINI2440-NO_OS-master/14.lcd/debug_release/: Makefile
bsp/s3c2440a_app1/s3c2440a/: .gdbinit  CMakeLists.txt  abc.cfg  ldscript.lds  mmu-armarchv4.c  mmu_setup.c  s3c2440_clock.c  s3c2440_clock.h  s3c2440_int.c  s3c2440_int.h  s3c2440_lcd.c  s3c2440_sd.c  s3c2440_timer.c  s3c2440_uart.c  serial.c  skyeye.conf  start.S
bsp/stm32f10x/: Makefile  bsp.c  stm32_rom.ld
bsp/stm32f10x/Libraries/: Makefile  tree.cfg
bsp/stm32f10x/Libraries/CMSIS/CM3/: Makefile
bsp/stm32f10x/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x/: system_stm32f10x.c
cfg/: s3c2440a-cfg.mk  stm32f10x-cfg.mk
include/: list.h  os.h  rtk.h  rtk_config.h  rtklib.h
kernel/: Makefile  creating_libs.c  kernel.c
libs/: Makefile  kprintf.c  mem.c  minilibc.c  rtkfork.c  slab.c
makefiles/: config.mk  makesymbol.sh  rules.mk
rtk/: CMakeLists.txt
rtk/arch/arm/: Makefile  armv4_context.c  armv4_context_gcc.S  armv4_exc.c  armv6m_context_arm.S  armv6m_context_gcc.S
rtk/cmake/: arm_none_eabi_gcc.cmake
rtk/core/: err.h  list.h  rtk.h
rtk/util/: creating_libs.c  kprintf.c  minilibc.c  rtkfork.c  slab.c
tools/qemu-win32/: debug-mini2440.bat  gdbcmd.txt  start-release-mini2440.bat
